25/07, start heterogeneous catalysis part

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -6,6 +6,23 @@ Ammonia oxidation is an essential catalytic reaction used in the production of a
 
 Detail and literature about the oxidation of Ammonia on Platinum nano-catalyst can be found here \parencite{Resta2020a}.
 
+
+This reaction is considered as a classic example of a strongly exothermic, heterogeneous, catalytic reaction [4].
+Due to the very fast kinetics of oxidation reactions, a direct experimental investigation of several reaction steps is difficult at realistic conditions.
+
+nitrous oxide is a powerful oxidiser similar to molecular oxygen.
+
+Selectivity to nitrous oxide at low temperature was reported in the following order: $Pt > Pd > Ni > Fe > W > Ti $[6].
+
+N2O selectivity for us ?
+
+NH3 oxidation requires surface sites for the adsorption of two ammonia molecules and two oxygen atoms.
+
+Furthermore, the importance of availability of oxygen vacant sites near N-containing adspecies was demonstrated by the decrease of the reaction rate when a surface oxide was formed [31–33].
+Finally, adsorbed oxygen did not block the ammonia adsorption [12].
+All these facts led to the conclusion that a dual-site mechanism is operative.
+A similar conclusion on the reaction mechanism was made for ammonia oxidation on a supported ruthenium catalyst [34].
+
 \subsection{From industry to model catalysis}
 
 "A long standing conundrum in the catalysis community emerged at the interface between surface science and heterogeneous catalysis, better known as the pressure and materials gap."
@@ -31,24 +48,34 @@ Nature Catalysis editorial, 2018.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
-    \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
-    \includegraphics[height=3cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
+    \includegraphics[height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/pt_gazes.png}
+    \includegraphics[height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/bcdi_data/B7/B7_facets.png}
+    \includegraphics[height=4cm]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sample/sxrd_sample.png}
     \caption{Platinum gazes used in industry (left), Reconstructed phase of a Pt particle measured at SixS, its diameter is of about 300 nm (middle), Pt 111 single crystal used in SXRD and XPS experiments, its diameter is of about 8 mm (right).}
 \end{figure}
 
-\subsection{Crystal structures}
-
-\subsection{Pt 111}
-
-\subsection{Pt 100}
-
-\subsection{Nanoparticles}
-
 \section{Aim and Scope}
+
+The oxidation of ammonia is a catalytic reaction that has had an extremely high impact on the 19th and 20th century, being at the origin of dramatic changes in the world demography with the fertilizer industry, and being today part of numerous industrial process that not only contribute to the fast climate change with greenhouse gases, but also to the ever growing pollution of our ecosystems.
+
+In this first chapter, the importance of the oxidation of ammonia has been underlined.
+It was shown that despite being a major catalytic process in a multi-billion industry, the exact mechanisms of action are not yet understood.
+If in the frame of this thesis, the focus will be set on the sole oxidation of ammonia that evidently, if not well understood, has been well optimized in industry reaching up to 99\% efficiency towards the production of nitrous oxide, the goal is also to develop methods that can speak to and attract the synchrotron neophyte to the study of heterogeneous catalysis with synchrotron radiation.
+
+Indeed, if it is of prime interest for a scientist to always be ready to answer to the question \textit{why ?}, one must also realize that the impact one has strongly depends on the application and reach of his work.
+Keeping this idea in mind, this thesis aims first at bridging the material and pressure gap to bring forth the possibility for synchrotron users to study catalytic reactions at conditions tending to 'real' industry conditions.
+Secondly, a focus has also been set on explaining the origin, advantages, drawbacks and workflows of each technique, especially for Bragg coherent diffraction imaging, a technique that has yet to reach its full potential through the development of 4th generation synchrotrons and powerful computing clusters.
 
 \section{Outline of the Thesis}
 
-In the first chapter of this thesis we will come back to the basics behind each X-ray technique that was used to study the catalyst, as well as define the exact meaning of heterogeneous catalysis and how
+The initial chapter of this thesis will provide a concise explanation of the fundamental principles governing the interaction between x-rays and matter.
+This will serve to underscore the origins, benefits, and limitations of each technique employed in the study of the ammonia oxidation.
+Additionally, it will explore how these catalytic reactions can be indirectly observed using x-rays, leveraging the unique signatures they leave on the materials involved.
+The SixS synchrotron beamline, which served as the primary location for conducting the majority of experiments, will be presented.
+Notably, the latest advancements in experimental techniques specific to this beamline will be covered.
+Finally, the latest computer programs used for the analysis of the collected data will be presented so that the reader of this thesis has complete knowledge of every step undertaken to obtain the final results.
 
-In the second chapter we will present and discuss the results that we obtained with three different techniques
+In a second chapter, the results obtained with three different techniques, surface x-ray diffraction, Bragg coherent diffration imaging and x-ray photoelectron spectroscopy, will be presented.
+Each step will be discussed, sample preparation, the choice of experimental conditions, the reproducibility of the results, the quality of the final data as well as the different difficulties encountered during data collection.
+
+Finally, in the last chapter of this thesis will be discussed quantitatively and qualitatively the relation between the result of each technique, their comparison to literature findings, as well as their reliability, representativity and validity, paving the way for any future study.
