--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -185,7 +185,7 @@ By integrating over the volume occupied by the atom we obtain the total contribu
     -r_0 \int \rho_{atom} (\vec{r}) e^{i\vec{q}.\vec{r}} d\vec{r} = -r_0 f^0(\vec{q}) = -r_0 FT [\rho_{atom} (\vec{r})]
 \end{equation}
 
-The scattering amplitude as a function of $\vec{q}$ is described by the atomic from factor $f^0(\vec{q})$, which is defined as the Fourier transform of the atomic electronic density $\rho_{atom}(\vec{r})$.
+The scattering amplitude as a function of $\vec{q}$ is described by the atomic from factor $f^0(\vec{q})$, which is defined as the Fourier transform of the atomic electronic density $\rho_{atom}(\vec{r})$ \parencite{Paganin}.
 The values for the atomic from factor can be approximated by a sum of Gaussians using tabulated coefficients (eq. \ref{eq:AtomicFormFactorTab}) available online \parencite{InterTablesOfCryst}.
 It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figure \ref{fig:atomic_form_factor}.
 
@@ -279,7 +279,7 @@ In the simplest case the pattern consists of a single atom, for example pure pla
 
 We can define the scattering factor $F_{crystal}$ of the crystal, that describes the amplitude of the scattered waves, by the sum of the atomic scattering factor $f_j(\vec{q})$ of each atom present in the crystal, while the phases between the scattered waves depend on the positions of the atoms $\vec{R}_j$ in the direction that is perpendicular to the scattering vector $\vec{q}$ (eq. \ref{eq:FCrystal1}).
 In other words, each atom can be described as a small volume $d^3\vec{r}$ in the electronic density $\rho(\vec{r})$, and the scattered field by the superposition of the contribution from the electronic cloud surrounding the atoms.
-If the atomic scattering factor is equal to the Fourier transform of the electronic density of a single atom, the structure factor of a crystal can be written as the Fourier transform of the crystal electronic density.
+If the atomic scattering factor is equal to the Fourier transform of the electronic density of a single atom, the structure factor of a crystal can be written as the Fourier transform of the crystal electronic density \parencite{Paganin}.
 %Thus, the total scattering amplitude at $2\theta$ will be equal to the vector sum of the scattering amplitudes in this direction from all volume elements $d^3\vec{r}$ in $\rho(\vec{r})$ taking into account the phases between them.
 
 \begin{equation}
@@ -362,7 +362,7 @@ These specific scattering vectors determine the scattering angles of the peaks o
     \vec{q} = \vec{G}  = h\vec{a}^* + k\vec{b}^* + l\vec{c}^*
 \end{equation}
 
-\subsection{Bragg's Law}
+\subsection{Bragg's Law}\label{sec:BraggLaw}
 
 The intensity scattered from a crystal as a function of the scattering vector $\vec{q}$ provides information about the arrangement and spacing of crystalline planes perpendicular to $\vec{q}$.
 The Miller indices are a set of integers used to represent the planes' orientation and spacing.
