--- a/main.tex
+++ b/main.tex
@@ -213,11 +213,10 @@
      
 % Theory
     \chapter{Theory and methods}
-    % \input{Sections/2_Theory_Models/Catalysis}
+    \input{Sections/2_Theory_Models/Catalysis}
     \input{Sections/2_Theory_Models/X-ray_interaction_matter}
     \input{Sections/2_Theory_Models/SXRD}
     \input{Sections/2_Theory_Models/BCDI}
-    % \input{Sections/2_Theory_Models/XPS}
     \input{Sections/2_Theory_Models/SixS}
     \input{Sections/2_Theory_Models/ComputerPrograms}
     
